# fwupd

contrib/: fwupd.spec.in
plugins/: meson.build
plugins/flashrom/: fu-plugin-flashrom.c
plugins/nitrokey/: README.md  fu-plugin-nitrokey.c  lsusb.txt  meson.build
src/: fu-plugin.c  fu-plugin.h  fu-quirks.h
